rke/minio/service.yml
kind: Service
apiVersion: v1
metadata:
  name: minio
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
