rke/minio/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minio.local
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
